src/style.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: var(--text);
  background-color: var(--background);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --background: #ffffff;
  --text: #ffffff;
  --accentOne: #ffffff;
  --accentTwo: #ffffff;
  --accentThree: #ffffff;
}

@media (max-width: 720px) {
  .mainInfo {
    flex-wrap: "wrap";
    flex-direction: column-reverse;
  }

  .mainInfo > * {
    margin-bottom: 20px;
    margin-top: 20px;
  }
}

body {
  background-color: var(--background);
  color: var(--text);
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

#app {
  max-width: 1180px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.vanilla:hover {
  filter: drop-shadow(0 0 2em #3178c6aa);
}

.card {
  padding: 2em;
}

button {
  border-radius: 8px;
  border: 1px solid var(--text);
  padding: 0.6em 1.2em;
  font-size: 1.1em;
  font-weight: 800;
  font-family: inherit;
  background-color: var(--background);
  color: var(--text);
  cursor: pointer;
  transition: border-color 0.25s;
  transition: background-color 0.25s;
}
.colour-container {
  display: flex;
  border-style: solid;
}
.colour-example {
  height: 200px;
  width: 20%;
}

#c-1 {
  background-color: var(--background);
}
#c-2 {
  background-color: var(--text);
}
#c-3 {
  background-color: var(--accentOne);
}
#c-4 {
  background-color: var(--accentTwo);
}
#c-5 {
  background-color: var(--accentThree);
}

.mainInfo {
  margin-bottom: 100px;
}
.bio-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.my-name {
  color: var(--accentTwo);
  text-shadow: 0 0 2px var(--accentTwo);
}
.FaLinkedin,
.FaGithub {
  transition: color 0.25s;
}

button:hover {
  background-color: var(--accentTwo);
  cursor: pointer;
  /* color: var(--accentTwo); */
}

.FaLinkedin:hover,
.FaGithub:hover {
  border-color: var(--background);
  /* background-color: var(--text); */
  color: var(--accentTwo);
  cursor: pointer;
}

.navbar {
  display: flex;
  align-items: center;
  border-style: solid;
  border-radius: 10px;
  margin-bottom: 50px;
}

.navbar-name {
  margin-right: auto;
}

.pfp-wrapper {
  position: relative;
  width: 50%;
  min-width: 200px;
  aspect-ratio: 1/1;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}
.pfp-wrapper::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;

  background-color: var(--text);
  z-index: 0;
}

.pfp-wrapper img {
  z-index: 1;

  width: 87%;
  height: 87%;
  object-fit: cover;
  position: relative;
  z-index: 2;
}

.ring {
  position: absolute;
  border-radius: 50%;
  border: 6px dashed transparent;
  box-sizing: border-box;
  z-index: 1;
  pointer-events: none;
}

.ring-one {
  width: 98%;
  height: 98%;
  border-color: var(--accentOne);
  border-width: 9px;
  animation: spin 55s linear infinite;
}

.ring-two {
  width: 91%;
  height: 91%;
  border-color: var(--accentTwo);
  border-width: 6px;
  animation: spinReverse 75s linear infinite;
  z-index: 5;
}
@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes spinReverse {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(-360deg);
  }
}

.journey-wrapper {
  display: flex;

  position: relative;
  padding: 2rem;
  gap: 2rem;
  margin-bottom: 150px;
}

.journey-line-wrapper {
  position: relative;
  width: 40px;
  flex-shrink: 0;
}
.journey-line {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 5px;
  background-color: var(--accentOne);
  height: 100%;
}
.journey-dot {
  position: absolute;
  left: -62px;
  top: 2.3rem;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: var(--accentOne);
  z-index: 2;
}
.journey-progress {
  position: absolute;
  top: 0;
  left: 0;
  width: 5px;
  background-color: var(--accentTwo);
  z-index: 1;
}
.journey-timeline {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}

.journey-year {
  font-size: 2.5rem;
  color: var(--accentOne);
  text-align: start;
  padding: 1rem;
  transition: color 1s ease, text-shadow 1s ease, transform 1s ease;
}

.year-current {
  color: var(--accentTwo);
  text-shadow: 0 0 2px var(--accentTwo);
  transform: scale(1.03);
}

.year-visited {
  color: var(--accentTwo);
}

.journey-entries {
  display: flex;
  flex-direction: column;
}
.journey-entry {
  grid-column: 2;
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 3rem;
  border-radius: 10px;
  padding: 5px;
  /* border-right: 3px solid var(--accentOne); */
  transition: box-shadow 0.2s ease-in-out;
}
.journey-entry:hover {
  box-shadow: 0 1px 10px var(--accentTwo);
}
.pulse {
  animation: pulse 2s infinite;
}

.visited {
  background-color: var(--accentTwo);
}

.journey-content {
  background-color: var(--background);
  padding: 1rem;
  text-align: start;
}

@keyframes pulse {
  0% {
    transform: scale(1);
    opacity: 1;
  }

  50% {
    transform: scale(1.3);
    opacity: 1;
    background-color: var(--accentTwo);
  }

  100% {
    transform: scale(1);
    opacity: 1;
  }
}

.education-container {
  margin-bottom: 150px;
}

.education-tiles {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  max-width: 1400px;
  margin: auto;
  margin-top: 100px;
  gap: 1rem;
}
.education-tile {
  border-style: solid;
  border-radius: 30px;
  aspect-ratio: 1/1;
  margin: 0.5rem;

  font-size: 1.5rem;

  transition: background-color 0.2s ease-in-out;
}

.education-tile:hover {
  background-color: var(--text);

  color: var(--accentTwo);
}

.education-tile > *,
.education-tile {
  text-align: start;
  padding: 5px;
}

.skills-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 150px;
}

.skills-sub-container {
  max-width: 1200px;
  /* border-style: solid; */
}

.skills-title {
  margin-bottom: 100px;
}
.skills-heading {
  text-align: start;
  margin-left: 50px;
}
.skill-list {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  gap: 1rem;

  justify-content: center;
  align-items: center;
}

.skill-item {
  border-style: solid;
  border-radius: 30px;
  width: 170px;
  aspect-ratio: 1/1;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: background-color 0.2s ease-in-out;
}

.skill-item:hover,
.skill-item > *:hover {
  background-color: var(--text);
  color: var(--accentTwo);
}

.skill-item svg {
  font-size: 6rem;
}

.project-tiles {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  max-width: 1400px;
  margin: auto;
  gap: 1rem;
  margin-top: 100px;
  margin-bottom: 150px;
}
.project-tile {
  border-style: solid;
  border-radius: 30px;
  aspect-ratio: 1/1;
  margin: 0.5rem;

  font-size: 1.5rem;
  transition: background-color 0.2s ease-in-out;
}

.project-tile:hover {
  background-color: var(--text);

  color: var(--accentTwo);
}

.project-tile {
  text-align: start;
  padding: 15px;
}

.contact-container {
  /* min-width: 300px; */
  border-style: solid;
  border-radius: 30px;
  padding: 5px;
  display: flex;
  flex-direction: column;
}

.contact-upper,
.contact-upper > *,
.contact-lower,
.contact-lower > * {
  display: flex;
  flex: 1;
  min-height: 30px;
  font-size: 1rem;
}

.contact-title {
  margin-bottom: 100px;
}
.contact-lower input {
  height: 300px;
}

